# yage

./: .gitignore  CMakeLists.txt  Makefile  README.md  yage.cbp  yage.layout  yage.vim
cmake/Modules/: FindGTest.cmake  FindSDL2.cmake
doc/uml/: use_cases.plantuml  use_cases.puml
include/: yage.h
include/engine/: game_engine.abstract.h  game_engine.interface.h  game_state.abstract.h  game_state.interface.h  runnable.interface.h  state_machine.implementation.h  updatable.interface.h
include/engine/states/: null_state.concrete.h
include/events/: event_listener.interface.h  event_manager.h  event_manager.interface.h
include/graphics/: bounding_box.interface.h  drawable.abstract.h  graphics_manager.h  texture_manager.h
include/input/: input_manager.h  keyboard_listener.interface.h
include/tests/engine/: state_machine.fixture.hpp
include/tests/graphics/: graphics.fixture.h  spritesheets.fixture.h
include/tests/unit/graphics/: graphics.fixture.h
include/yage/: utility.hpp
include/yage/engine/: game_engine.abstract.h  game_engine.h  game_engine.hpp  game_engine.interface.h  game_state.abstract.h  game_state.h  game_state.hpp  game_state.interface.h  runnable.h  runnable.hpp  state_machine.h  state_machine.hpp
include/yage/engine/states/: null_state.concrete.h  splash_screen.h  splash_screen.hpp
include/yage/events/: event_listener.h  event_listener.hpp  event_manager.h  event_manager.hpp  event_manager.interface.h  keyboard_listener.h  keyboard_listener.interface.h
include/yage/graphics/: bounding_box.interface.hpp  drawable.abstract.h  drawable.abstract.hpp  font.hpp  font_manager.hpp  graphics_manager.hpp  renderable.hpp  spritesheet.hpp  texture.hpp  texture_manager.hpp
include/yage/input/: input_listener.hpp  input_manager.h  input_manager.hpp  keyboard_listener.h  keyboard_listener.interface.h  mouse.hpp
include/yage/widgets/: button.hpp  label.hpp
src/: main.cpp  utility.cpp
src/engine/: game_engine.abstract.cpp  game_engine.cpp  game_state.abstract.cpp  game_state.cpp  state_machine.cpp  state_machine.implementation.cpp
src/engine/states/: null_state.concrete.cpp  splash_screen.cpp
src/events/: event_listener.cpp  event_manager.cpp
src/graphics/: drawable.abstract.cpp  font.cpp  font_manager.cpp  graphics_manager.cpp  spritesheet.cpp  texture.cpp  texture_manager.cpp
src/input/: input_listener.cpp  input_manager.cpp  mouse.cpp
src/snippets/: unused_code.cpp
src/widgets/: button.cpp  label.cpp
tests/engine/: state_machine.unit.cpp
tests/graphics/: graphics_manager.unit.cpp  spritesheet.cpp
tests/unit/graphics/: graphics_manager.unit.cpp
